--- a/main.ipynb
+++ b/main.ipynb
@@ -1043,7 +1043,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "myvenv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1061,5 +1061,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
